--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Soon</title>
 </head>
 <body>
-    <h1>Testing</h1>
-    <h2>Just Testing</h2>
+    <h1>Server Status:</h1>
+    <h2>Running</h2>
 </body>
 </html>
