--- a/secondary.html
+++ b/secondary.html
@@ -1,144 +1,216 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>DevDodger — Liquid Glass Cyberpunk</title>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;600;800&family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DevDodger — Liquid Glass Cyberpunk Hub</title>
   <style>
-    :root{
-      --bg:#050308;
-      --glass: rgba(255,255,255,0.06);
-      --glass-2: rgba(255,255,255,0.04);
-      --accent-1: #8a2be2; /* neon purple */
-      --accent-2: #00d4ff; /* electric cyan */
-      --neon: drop-shadow(0 0 14px rgba(138,43,226,0.45)) drop-shadow(0 0 28px rgba(0,212,255,0.12));
-      --card-radius: 18px;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%;background:radial-gradient(circle at 20% 10%, rgba(138,43,226,0.06) 0%, transparent 12%), radial-gradient(circle at 80% 80%, rgba(0,212,255,0.03) 0%, transparent 18%), var(--bg);color:#e7eef8;font-family:'Outfit',system-ui,Segoe UI,Roboto,'Helvetica Neue',Arial;overflow:hidden}
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
-    a{color:inherit;text-decoration:none}
-
-    /* skyline */
-    .skyline{position:absolute;inset:0;z-index:0;pointer-events:none;display:block}
-    .skyline svg{width:120%;height:100%;transform:translateX(-10%);opacity:0.24;filter:blur(8px) saturate(140%)}
-
-    /* main container */
-    .stage{position:relative;min-height:100vh;display:grid;place-items:center;padding:32px;z-index:2}
-
-    /* blobs */
-    .blobs{position:absolute;inset:0;z-index:1;pointer-events:none}
-    svg.blob{position:absolute;width:40vmax;height:40vmax;will-change:transform;mix-blend-mode:screen}
-
-    /* glass card */
-    .card{
-      position:relative;z-index:3;backdrop-filter: blur(8px) saturate(140%);
-      background: linear-gradient(135deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
-      border: 1px solid rgba(255,255,255,0.06);
-      border-radius:var(--card-radius);padding:36px 44px;width:min(880px,92vw);display:flex;gap:24px;align-items:center;box-shadow:0 8px 30px rgba(0,0,0,0.6);
-      transform-style:preserve-3d;transition:transform .25s ease;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-    /* left hero */
-    .hero{
-      flex:1;min-width:260px
-    }
-    .title{font-family:'Space Grotesk';font-weight:800;font-size:clamp(28px,6vw,52px);letter-spacing:-0.02em;margin:0 0 6px;line-height:0.95;color:linear-gradient(90deg,var(--accent-1),var(--accent-2))}
-    .subtitle{font-weight:600;opacity:0.9;margin:0 0 12px;color:#dbecff}
-    .tag{display:inline-block;padding:6px 12px;border-radius:999px;font-weight:600;background:linear-gradient(90deg, rgba(138,43,226,0.12), rgba(0,212,255,0.05));border:1px solid rgba(138,43,226,0.08);font-size:13px}
-
-    /* right socials */
-    .socials{display:flex;flex-direction:column;gap:14px;align-items:flex-end}
-    .social-btn{display:flex;align-items:center;gap:12px;padding:10px 14px;border-radius:999px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.04);min-width:180px;cursor:pointer;backdrop-filter: blur(6px);transition:transform .18s cubic-bezier(.2,.9,.3,1), box-shadow .18s}
-    .social-btn:hover{transform:translateY(-6px) scale(1.02);box-shadow:0 10px 40px rgba(138,43,226,0.06)}
-    .social-btn:active{transform:translateY(-2px)}
-    .social-btn svg{width:20px;height:20px;filter:drop-shadow(0 4px 10px rgba(0,0,0,0.45))}
-    .social-label{flex:1;text-align:left}
-    .copy{font-size:13px;color:#cfeaff;opacity:0.95}
-
-    /* footer small */
-    .meta{margin-top:10px;font-size:12px;opacity:0.7;color:#b9d8ff}
-
-    /* cursor halo */
-    .cursor-halo{position:fixed;left:0;top:0;width:220px;height:220px;border-radius:50%;pointer-events:none;mix-blend-mode:screen;transform:translate(-50%,-50%);z-index:5}
-
-    /* responsive */
-    @media (max-width:720px){
-      .card{flex-direction:column;align-items:stretch;padding:20px;border-radius:16px}
-      .socials{align-items:stretch}
-      .social-btn{justify-content:center}
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: radial-gradient(circle at top left, #090a10 0%, #050505 100%);
+      overflow: hidden;
+      color: white;
     }
 
-    /* subtle animations */
-    @keyframes pulseGlow{0%{filter:drop-shadow(0 0 8px rgba(138,43,226,0.12))}50%{filter:drop-shadow(0 0 22px rgba(0,212,255,0.12))}100%{filter:drop-shadow(0 0 8px rgba(138,43,226,0.12))}}
-    .neon-accent{color:var(--accent-1);text-shadow:0 2px 8px rgba(138,43,226,0.22);animation:pulseGlow 4.5s ease-in-out infinite}
+    /* --- Cyberpunk Skyline Background --- */
+    .skyline {
+      position: absolute;
+      bottom: 0;
+      width: 200%;
+      height: 50vh;
+      background: url('https://i.imgur.com/bP1L2Zr.png') repeat-x;
+      background-size: contain;
+      filter: blur(8px) brightness(0.4);
+      animation: moveSkyline 40s linear infinite;
+      z-index: 0;
+    }
 
+    @keyframes moveSkyline {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
+    }
+
+    /* --- Liquid Blobs --- */
+    .blob {
+      position: absolute;
+      width: 700px;
+      height: 700px;
+      border-radius: 50%;
+      filter: blur(180px);
+      opacity: 0.5;
+      animation: morph 15s ease-in-out infinite;
+    }
+
+    .blob1 {
+      background: linear-gradient(135deg, #00f0ff, #8a00ff);
+      top: -200px;
+      left: -150px;
+    }
+
+    .blob2 {
+      background: linear-gradient(135deg, #ff0080, #00f0ff);
+      bottom: -200px;
+      right: -150px;
+      animation-delay: 5s;
+    }
+
+    @keyframes morph {
+      0%, 100% { transform: scale(1) translate(0, 0); }
+      50% { transform: scale(1.2) translate(50px, -50px); }
+    }
+
+    /* --- Glass Card --- */
+    .card {
+      position: relative;
+      z-index: 10;
+      backdrop-filter: blur(20px) saturate(180%);
+      -webkit-backdrop-filter: blur(20px) saturate(180%);
+      background: rgba(20, 20, 30, 0.55);
+      border-radius: 2rem;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      max-width: 600px;
+      margin: 20vh auto;
+      padding: 2rem 3rem;
+      text-align: center;
+      transition: all 0.4s ease;
+    }
+
+    .card:hover {
+      transform: scale(1.03);
+      box-shadow: 0 0 40px rgba(138, 0, 255, 0.3);
+    }
+
+    h1 {
+      font-size: 3rem;
+      background: linear-gradient(90deg, #8a00ff, #00f0ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: 0.5rem;
+    }
+
+    .subtitle {
+      font-weight: 600;
+      color: #b0b0ff;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      color: #b3b3b3;
+      font-size: 0.95rem;
+      line-height: 1.6;
+    }
+
+    /* --- Social Buttons --- */
+    .socials {
+      display: flex;
+      justify-content: center;
+      gap: 1.2rem;
+      margin-top: 1.5rem;
+    }
+
+    .socials a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(5px);
+      transition: 0.3s;
+      font-size: 1.4rem;
+      color: white;
+      text-decoration: none;
+    }
+
+    .socials a:hover {
+      background: linear-gradient(135deg, #8a00ff, #00f0ff);
+      box-shadow: 0 0 20px rgba(0, 240, 255, 0.4);
+      transform: scale(1.1);
+    }
+
+    /* --- Additional Info Section --- */
+    .info {
+      margin-top: 2rem;
+      display: grid;
+      gap: 1rem;
+      color: #cfd0ff;
+    }
+
+    .info div {
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 1rem;
+      padding: 1rem;
+      transition: background 0.3s ease;
+    }
+
+    .info div:hover {
+      background: rgba(255, 255, 255, 0.1);
+    }
+
+    /* --- Cursor Glow --- */
+    .cursor-glow {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 200px;
+      height: 200px;
+      pointer-events: none;
+      border-radius: 50%;
+      background: radial-gradient(circle, rgba(0,240,255,0.3) 0%, transparent 80%);
+      mix-blend-mode: lighten;
+      transform: translate(-50%, -50%);
+      transition: transform 0.05s linear;
+      z-index: 20;
+    }
   </style>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div class="blob blob1"></div>
+  <div class="blob blob2"></div>
+  <div class="skyline"></div>
 
-  <!-- skyline -->
-  <div class="skyline" aria-hidden="true">
-    <svg viewBox="0 0 1600 600" preserveAspectRatio="xMidYMax slice">
-      <defs>
-        <linearGradient id="gradSky" x1="0" x2="1"><stop offset="0" stop-color="#0b0b12" stop-opacity="1"/><stop offset="1" stop-color="#021024" stop-opacity="1"/></linearGradient>
-      </defs>
-      <rect width="100%" height="100%" fill="url(#gradSky)"/>
-      <g transform="translate(0,200)">
-        <!-- skyline silhouette -->
-        <path d="M0,220 L40,160 L70,190 L120,130 L160,170 L220,100 L280,120 L340,60 L420,140 L480,90 L540,160 L620,40 L700,120 L780,60 L860,140 L940,80 L1000,120 L1060,60 L1140,140 L1220,100 L1280,140 L1340,80 L1400,150 L1480,100 L1560,160 L1600,120 L1600,600 L0,600 Z" fill="#001118" opacity="0.9"/>
-        <!-- neon highlights -->
-        <g opacity="0.35" fill="none" stroke="#8a2be2" stroke-width="1">
-          <path d="M120,130 L160,170"/>
-          <path d="M420,140 L480,90"/>
-          <path d="M700,120 L780,60"/>
-          <path d="M1140,140 L1220,100"/>
-        </g>
-      </g>
-    </svg>
+  <div class="cursor-glow" id="cursorGlow"></div>
+
+  <div class="card">
+    <h1>DevDodger</h1>
+    <div class="subtitle">Developer • Creator</div>
+    <p>Building immersive interactive experiences — merging liquid design and cyberpunk tech.</p>
+
+    <div class="socials">
+      <a href="https://www.youtube.com/@ReidLMiller" target="_blank"><i class="fab fa-youtube"></i></a>
+      <a href="https://github.com/devdodger" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="#" onclick="copyDiscord()"><i class="fab fa-discord"></i></a>
+    </div>
+
+    <div class="info">
+      <div>💻 Current Project: Liquid Cyber UI experiments</div>
+      <div>🌌 Interests: Space • Coding • Design • Open-world Exploration</div>
+      <div>⚡ Contact: Discord <strong>dod_gers</strong></div>
+    </div>
   </div>
 
-  <!-- animated blobs layer -->
-  <div class="blobs" aria-hidden="true">
+  <script>
+    // Cursor glow follow
+    const glow = document.getElementById('cursorGlow');
+    document.addEventListener('mousemove', (e) => {
+      glow.style.transform = `translate(${e.clientX}px, ${e.clientY}px)`;
+    });
 
-    <svg class="blob" style="left:-8vw;top:4vh;transform:translateZ(0) scale(1.1);filter:blur(28px);opacity:0.85;" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-      <defs>
-        <linearGradient id="g1" x1="0" x2="1"><stop offset="0" stop-color="#8a2be2"/><stop offset="1" stop-color="#00d4ff"/></linearGradient>
-        <filter id="wavy1"><feTurbulence id="turb" baseFrequency="0.006" numOctaves="3" seed="2"></feTurbulence><feDisplacementMap in="SourceGraphic" scale="30"/></filter>
-      </defs>
-      <g filter="url(#wavy1)">
-        <path fill="url(#g1)" d="M300,40 C380,40 520,80 540,170 C560,260 500,340 420,420 C340,500 220,540 140,460 C60,380 80,260 100,180 C120,100 220,40 300,40Z"/>
-      </g>
-    </svg>
-
-    <svg class="blob" style="right:-10vw;bottom:-6vh;transform:translateZ(0) scale(1.05);filter:blur(34px);opacity:0.9;" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-      <defs>
-        <linearGradient id="g2" x1="0" x2="1"><stop offset="0" stop-color="#ff66b3"/><stop offset="1" stop-color="#00d4ff"/></linearGradient>
-        <filter id="wavy2"><feTurbulence baseFrequency="0.005" numOctaves="2" seed="6"></feTurbulence><feDisplacementMap in="SourceGraphic" scale="36"/></filter>
-      </defs>
-      <g filter="url(#wavy2)">
-        <path fill="url(#g2)" d="M300,20 C380,30 500,80 520,160 C540,240 500,310 430,390 C360,470 240,510 150,440 C60,370 80,240 100,170 C120,100 220,10 300,20Z"/>
-      </g>
-    </svg>
-
-  </div>
-
-  <div class="stage">
-    <div class="card" id="card">
-      <div class="hero">
-        <div class="tag">Developer • Creator</div>
-        <h1 class="title neon-accent">DevDodger</h1>
-        <p class="subtitle">Liquid glass cyberpunk personal hub — interactive micro-portfolio & contact</p>
-        <div class="meta">Move your mouse/cursor — the glass and blobs will react. Click icons for quick actions.</div>
-      </div>
-
-      <div class="socials">
-        <a class="social-btn" href="https://www.youtube.com/@ReidLMiller" target="_blank" rel="noopener noreferrer">
-          <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M23 7.5s-.2-1.7-.8-2.4c-.8-.8-1.7-.8-2.1-.9C16.6 4 12 4 12 4s-4.6 0-7.1.2c-.4 0-1.3.1-2.1.9C2.2 5.8 2 7.5 2 7.5S1.8 9.6 1.8 11.7 2 15.9 2 15.9s.2 1.7.8 2.4c.8.8 1.9.8 2.4.9 1.7.1 7.1.2 7.1.2s4.6 0 7.1-.2c.4 0 1.3-.1 2.1-.9.6-.7.8-2.4.8-2.4s.2-2.1.2-4.2S23 7.5 23 7.5z" fill="url(#g1)" opacity="0.95"/></svg>
-          <div class="social-label">YouTube</div>
-          <div class="copy">/@ReidLMiller</div>
-        </a>
-
-        <a class="social-btn" href="https://github.com/devdodger/" target="_blank" rel="noopener noreferrer">
-          <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 .5C5.645.5.5 5.645.5 12c
+    // Copy Discord
+    function copyDiscord() {
+      navigator.clipboard.writeText('dod_gers');
+      alert('Discord tag copied: dod_gers');
+    }
+  </script>
+</body>
+</html>
