--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>DevDodger — Liquid Glass Cyberpunk Hub</title>
+<title>DevDodger</title>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;600;800&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -163,12 +163,12 @@
       <div class="card-left">
         <div class="tag">Developer • Creator</div>
         <h1>DevDodger</h1>
-        <div class="subtitle">Liquid glass cyberpunk — interactive tech demo</div>
+        <div class="subtitle">Website Tech Demo</div>
         <div class="meta">Move your mouse — blobs, fog, and skyline parallax will react. Click icons for actions.</div>
 
         <div class="info" style="margin-top:18px">
-          <div class="info-item"><div class="info-emoji">💻</div><div class="info-text">Current: Liquid Cyber UI experiments</div></div>
-          <div class="info-item"><div class="info-emoji">🌌</div><div class="info-text">Interests: Space • Coding • Design • Open-world Exploration</div></div>
+          <div class="info-item"><div class="info-emoji">💻</div><div class="info-text">Current: Test</div></div>
+          <div class="info-item"><div class="info-emoji">🌌</div><div class="info-text">Interests: Making stuff</div></div>
           <div class="info-item"><div class="info-emoji">⚡</div><div class="info-text">Contact: Discord <strong>dod_gers</strong> (click to copy)</div></div>
         </div>
       </div>
