--- a/index.html
+++ b/index.html
@@ -185,6 +185,13 @@
           <div class="social-label">GitHub</div>
           <div class="social-copy">/devdodger</div>
         </a>
+        
+        
+        <a class="social-btn" href="minecraft.html" target="_blank" rel="noopener noreferrer">
+          <svg class="social-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">< fill="currentColor"/></svg>
+          <div class="social-label">Minecraft<div>Server</div></div>
+          <div class="social-copy">devdodger.tech</div>
+        </a>
 
         <button class="social-btn" id="discordBtn" title="Copy Discord tag">
           <svg class="social-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20 3H4C2.9 3 2 3.9 2 5v12c0 1.1.9 2 2 2h5l1 2h4l1-2h5c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z" fill="#8a2be2"/></svg>
