--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+<meta property="og:description" content="dodgers website" />
+<meta property="og:image" content="https://cdn.discordapp.com/attachments/722601874108186634/1431464814034555041/extension_icon_1.png?ex=68fd82fe&is=68fc317e&hm=96a7a42453cc1c6668c4b94d0b8e148bd229f81590d07f980ea7d7ff0aedc4f3&" />
+<meta property="og:type" content="website" />
+<link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/722601874108186634/1431464814034555041/extension_icon_1.png?ex=68fd82fe&is=68fc317e&hm=96a7a42453cc1c6668c4b94d0b8e148bd229f81590d07f980ea7d7ff0aedc4f3&">
+<link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/722601874108186634/1431464814034555041/extension_icon_1.png?ex=68fd82fe&is=68fc317e&hm=96a7a42453cc1c6668c4b94d0b8e148bd229f81590d07f980ea7d7ff0aedc4f3&">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>DevDodger</title>
